[workspace]
members = [
    "components/equihash",
    "components/f4jumble",
    "components/zcash_address",
    "components/zcash_encoding",
    "components/zcash_note_encryption",
    "zcash_client_backend",
    "zcash_client_sqlite",
    "zcash_extensions",
    "zcash_history",
    "zcash_primitives",
    "zcash_proofs",
]

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[patch.crates-io]
zcash_encoding = { path = "components/zcash_encoding" }
zcash_note_encryption = { path = "components/zcash_note_encryption" }
orchard = { version = "0.4", git = "https://github.com/QED-it/orchard", branch = "librustzcash_980736806" }
bridgetree = { git = "https://github.com/zcash/incrementalmerkletree.git", rev = "ea1686e8f8f6c1e41aa97251a7eb4fadfd33df47" }
incrementalmerkletree = { git = "https://github.com/zcash/incrementalmerkletree.git", rev = "ea1686e8f8f6c1e41aa97251a7eb4fadfd33df47" }
