[package]
name = "zcash_history"
version = "0.3.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/zcash_history/"
description = "Library for Zcash blockchain history tools"
categories = ["cryptography::cryptocurrencies"]

[dev-dependencies]
assert_matches = "1.3.0"
quickcheck = "0.9"

[dependencies]
# FIXME: Although winnow isn't used directly, it's deeply needed in the dependency tree. The latest version of winnow
# causes a build issue because it enforces the use of Rust v1.64.0, while this crate is tied to v1.61.0.
# Therefore, as a temporary fix, winnow has been added here to pin it to an older version that doesn't require Rust v1.64.0
winnow = "=0.4.1"  
primitive-types = "0.11"
byteorder = "1"
blake2 = { package = "blake2b_simd", version = "1" }

[lib]
bench = false
