[package]
name = "zcash_history"
version = "0.3.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/zcash_history/"
description = "Library for Zcash blockchain history tools"
categories = ["cryptography::cryptocurrencies"]

[dev-dependencies]
assert_matches = "1.3.0"
quickcheck = "0.9"

[dependencies]
# TODO: Pined until we move to rust v1.64.0 or above to support winnow > 0.4.1
winnow = "=0.4.1"
primitive-types = "0.11"
byteorder = "1"
blake2 = { package = "blake2b_simd", version = "1" }

[lib]
bench = false
