[package]
name = "zcash_proofs"
description = "Zcash zk-SNARK circuits and proving APIs"
version = "0.8.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
homepage = "https://github.com/zcash/librustzcash"
repository = "https://github.com/zcash/librustzcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56.1"
categories = ["cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
bellman = { version = "0.13.1", default-features = false, features = ["groth16"] }
blake2b_simd = "1"
bls12_381 = "0.7"
byteorder = "1"
directories = { version = "4", optional = true }
group = "0.12"
jubjub = "0.9"
lazy_static = "1"
minreq = { version = "2", features = ["https"], optional = true }
rand_core = "0.6"
redjubjub = "0.5"
tracing = "0.1"
wagyu-zcash-parameters = { version = "0.2", optional = true }
zcash_primitives = { version = "0.8", path = "../zcash_primitives" }

[dev-dependencies]
criterion = "0.3"
rand_xorshift = "0.3"

[target.'cfg(unix)'.dev-dependencies]
# FIXME: The `inferno` crate isn't a direct dependency, but is deeply nested in the dependency tree.
# The latest version (0.11.15) of `inferno` causes a compilation error. Therefore, as a temporary fix,
# `inferno` is added here to pin it to the previous version (0.11.14), which doesn't cause the compilation
# error.
inferno = "=0.11.14"
pprof = { version = "0.9", features = ["criterion", "flamegraph"] } # MSRV 1.56

[features]
default = ["local-prover", "multicore"]
bundled-prover = ["wagyu-zcash-parameters"]
download-params = ["minreq", "directories"]
local-prover = ["directories"]
multicore = ["bellman/multicore"]

[lib]
bench = false

[[bench]]
name = "sapling"
harness = false
required-features = ["local-prover"]

[[example]]
name = "get-params-path"
required-features = ["directories"]

[[example]]
name = "download-params"
required-features = ["download-params"]

[[example]]
name = "download-sprout-and-sapling-params"
required-features = ["download-params"]

[badges]
maintenance = { status = "actively-developed" }
